permitir conexao com banco aws e inicio medidas caseiras
